Add default icon to subreddit if no icon found on response

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -28,7 +28,7 @@ p {
   width: clamp(30rem, 50%, 60rem);
   margin: auto;
 }
-.articles, .article, .comment, .postcard, .header {
+.articles, .article, .comment, .postcard, .header, .sidebar {
   border: solid 1px black;
 }
 
