--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,10 @@
+:root {
+  --gap: 8px;
+  --gap2: 16px;
+  --spacing: 16px;
+  --spacing-5: 64px;
+}
+
 * {
   box-sizing: border-box;
   position: relative;
@@ -22,16 +29,57 @@ p {
 
 .App {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-gap: var(--gap2);
 }
 
 .articles {
-  width: clamp(30rem, 50%, 60rem);
-  margin: auto;
+  grid-column: 1/3;
 }
-.articles, .article, .comment, .postcard, .header, .sidebar {
+.articles, .article, .comment, .postcard, .header, .sidebar, .subreddit {
   border: solid 1px black;
 }
 
 .header {
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: var(--gap2);
+  align-content: center;
+  padding: 0 var(--spacing-5);
+}
+
+.icon {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+svg {
   width: 100%;
 }
+
+.icon img{
+  border-radius: 50%;
+}
+
+.logo {
+  display: flex;
+  padding-left: 16px
+}
+
+.search {
+  display: flex;
+  align-items: center;
+}
+
+.subreddit {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 1fr;
+  grid-gap: var(--gap);
+  align-items: center;
+  justify-items: start;
+  padding-left: var(--spacing);
+}
+
