--- a/src/App/App.css
+++ b/src/App/App.css
@@ -27,6 +27,15 @@ p {
   text-wrap: pretty;
 }
 
+span {
+  color: #39A7FF;
+}
+svg {
+  max-height: 60px;
+  margin: auto 0;
+  height: auto;
+}
+
 .App {
   text-align: center;
   display: grid;
@@ -48,15 +57,12 @@ p {
   grid-gap: var(--gap2);
   align-content: center;
   padding: 0 var(--spacing-5);
+  height: 64px;
 }
 
 .icon {
   width: 3.5rem;
   height: 3.5rem;
-}
-
-svg {
-  width: 100%;
 }
 
 .icon img{
@@ -65,7 +71,7 @@ svg {
 
 .logo {
   display: flex;
-  padding-left: 16px
+  padding-left: 16px;
 }
 
 .search {
@@ -82,4 +88,3 @@ svg {
   justify-items: start;
   padding-left: var(--spacing);
 }
-
