--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,8 +1,10 @@
 :root {
   --gap: 8px;
   --gap2: 16px;
+  --gap3: 36px;
   --spacing: 16px;
-  --spacing-5: 64px;
+  --spacing3: 24px;
+  --spacing5: 64px;
 }
 
 * {
@@ -31,10 +33,17 @@ span {
   color: #39A7FF;
 }
 svg {
-  max-height: 60px;
+  width: 3.5rem;
+  height: 3.5rem;
   margin: auto 0;
   height: auto;
-  min-width: 40px;
+}
+
+ul {
+  display:flex;
+  flex-direction: column;
+  padding-inline-start: 0;
+  gap: var(--gap);
 }
 
 .App {
@@ -46,12 +55,41 @@ svg {
     display: block;
    }
 }
+.article-wrapper {
+  display: flex;
+}
 
 .articles {
+  display: grid;
   grid-column: 1/3;
+  gap: var(--gap3);
+  padding-left: var(--spacing);
 }
-.articles, .article, .comment, .postcard, .header, .sidebar, .subreddit {
-  border: solid 1px black;
+
+
+.card {
+  padding: var(--spacing3);
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+}
+
+.card:hover {
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1),0 10px 10px -5px rgba(0,0,0,0.04);
+}
+
+.comment {
+  background-color: aliceblue;
+  padding: var(--spacing3);
+  margin: var(--spacing);
+}
+.comment:hover {
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+}
+
+.comment-metadata {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: var(--gap2);
 }
 
 .header {
@@ -63,6 +101,7 @@ svg {
   padding: 0 var(--spacing-5);
   height: 64px;
   white-space: nowrap;
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
   @media screen and (max-width: 768px) {
    display: flex;
    flex-wrap: wrap;
@@ -73,6 +112,7 @@ svg {
 .icon {
   width: 3.5rem;
   height: 3.5rem;
+  border-radius: 100%;
 }
 
 .icon img{
@@ -95,10 +135,13 @@ svg {
 
 .sidebar {
   min-width: 150px;
+  text-align: start;
+  padding-left: 16px
 }
 
 .subreddit {
-  display: grid;
+  list-style-type: none;
+ /*  display: grid;
   grid-template-columns: 1fr 5fr;
   grid-template-rows: 1fr;
   grid-gap: var(--gap);
@@ -107,7 +150,20 @@ svg {
   padding-left: var(--spacing);
   text-align: start;
   white-space: nowrap;
-  overflow: hidden;
+  overflow: hidden; */
+}
+
+.subreddit button {
+  gap: 8px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: none;
+  border: none;
+}
+
+.subreddit button:hover {
+  background-color: beige;
 }
 
 .selectedElement {
