--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,5 @@
+
+
 :root {
   --gap: 8px;
   --gap2: 16px;
@@ -5,6 +7,7 @@
   --spacing: 16px;
   --spacing3: 24px;
   --spacing5: 64px;
+  --border-radius: 16px;
 }
 
 * {
@@ -21,8 +24,20 @@ h1, h2, h3, h4 {
   text-wrap: balance;
 }
 
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+}
+
+
+
 img {
   max-width: 100%;
+  border-radius: var(--border-radius);
 }
 
 p {
@@ -38,7 +53,10 @@ svg {
   margin: auto 0;
   height: auto;
 }
-
+video {
+  border-radius: var(--border-radius);
+  max-height: 600px;
+}
 ul {
   display:flex;
   flex-direction: column;
@@ -57,6 +75,11 @@ ul {
 }
 .article-wrapper {
   display: flex;
+  gap: var(--gap2)
+}
+
+.article-content {
+  width: 90%;
 }
 
 .articles {
@@ -119,6 +142,12 @@ ul {
   border-radius: 50%;
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
 .logo {
   display: flex;
   padding-left: 16px;
@@ -169,3 +198,5 @@ ul {
 .selectedElement {
   background-color: #39A7FF;
 }
+
+@import "~react-image-gallery/styles/css/image-gallery.css";
