--- a/src/App/App.css
+++ b/src/App/App.css
@@ -36,6 +36,7 @@ iframe {
 
 
 img {
+  max-height: 50vh;
   max-width: 100%;
   border-radius: var(--border-radius);
 }
@@ -70,20 +71,45 @@ ul {
     display: block;
    }
 }
+.article-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.article-metadata {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.article-subreddit {
+  text-align: start;
+}
+
 .article-wrapper {
   display: flex;
   gap: var(--gap2)
 }
 
-.article-content {
-}
-
 .articles {
   display: grid;
-  grid-column: 1/3;
+  grid-column: 2/3;
   gap: var(--gap3);
   padding-left: var(--spacing);
 }
+
+.arrow {
+  border: solid red;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 3px;
+  background: none;
+  height: 1rem;
+  width: 1rem
+}
+
 
 
 .card {
@@ -111,6 +137,15 @@ ul {
   margin-top: var(--gap2);
 }
 
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.down:active {
+  top: 5px;
+}
+
 .header {
   grid-column: 1/-1;
   display: grid;
@@ -126,6 +161,11 @@ ul {
    flex-wrap: wrap;
    height: auto;
   }
+}
+
+.green-arrow {
+  border: solid green;
+  border-width: 0 7px 7px 0;
 }
 
 .icon {
@@ -151,6 +191,11 @@ ul {
 
 .logo p {
   min-width: auto;
+}
+
+.score {
+  min-width: auto;
+  font-weight: bold;
 }
 
 .search {
@@ -193,6 +238,15 @@ ul {
 
 .selectedElement {
   background-color: #39A7FF;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.up:active {
+  bottom: 5px;
 }
 
 @import "~react-image-gallery/styles/css/image-gallery.css";
