background color for a container

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -65,6 +65,12 @@ ul {
     display: block;
    }
 }
+
+.article {
+  background-color: antiquewhite ;
+  border-radius: 10px;
+}
+
 .article-content {
   flex-grow: 1;
   display: flex;
@@ -74,7 +80,7 @@ ul {
 
 .article-metadata {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   gap: var(--gap3);
 }
