--- a/src/Utils/ImageComponents/ImageOverlay.css
+++ b/src/Utils/ImageComponents/ImageOverlay.css
@@ -13,6 +13,10 @@
 
 .overlay-content {
     background: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
+}
+
+.overlay-content img {
+    max-height: 90vh;
 }
