--- a/src/App/App.css
+++ b/src/App/App.css
@@ -133,11 +133,12 @@ ul {
 
 .card {
   padding: var(--spacing3);
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.3),0 4px 6px -2px rgba(0,0,0,0.15);
+  height: fit-content;
 }
 
 .card:hover {
-  box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1),0 10px 10px -5px rgba(0,0,0,0.04);
+  box-shadow: 0 20px 25px -5px rgba(0,0,0,0.2),0 10px 10px -5px rgba(0,0,0,0.1);
 }
 
 .comment {
@@ -196,7 +197,6 @@ ul {
   padding: 0 var(--spacing-5);
   height: 64px;
   white-space: nowrap;
-  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
   @media screen and (max-width: 768px) {
    display: flex;
    flex-wrap: wrap;
