feat: Integrate HtmlComponent and implement spoiler handling
- Created HtmlComponent to securely render HTML content with decoded entities, utilizing the 'he' library for HTML entity decoding and 'DOMPurify' for content sanitization.
- Enhanced Article, Comments, and DetailedArticle components to use HtmlComponent for improved content rendering and security.
- Implemented spoiler functionality to mask and reveal content in spans with the 'spoiler' class, adding interactive elements for user engagement.
- Updated CSS to style spoilers with a click-to-reveal interaction pattern, ensuring a consistent and accessible UX.
- Installed 'he' dependency for HtmlComponent to handle HTML entity decoding within received content.

--- a/src/Articles/Article/Article.css
+++ b/src/Articles/Article/Article.css
@@ -3,6 +3,40 @@
     background: none;
 }
 
+/* Spoiler bars */
+.md-spoiler-text {
+    position: relative; 
+    background-color: black;
+    color: black;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.md-spoiler-text::before {
+    content: 'Click to reveal spoiler';
+    color: white;
+    background-color: rgb(218, 72, 72);
+    position: absolute; 
+    top: 0;
+    left: 0;
+    right: 0; 
+    height: 100%; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    width: auto;
+}
+
+.revealed {
+    color: inherit;
+    background-color: transparent;
+}
+
+.revealed::before {
+    display: none;
+}
+
+
 .paragraph-wrapper {
     position: relative;
     max-height: 200px;
@@ -10,6 +44,7 @@
     transition: max-height 0.3s ease;
 
 }
+
 
 
 .paragraph-wrapper:hover {
