--- a/src/Utils/ImageComponents/ImageOverlay.css
+++ b/src/Utils/ImageComponents/ImageOverlay.css
@@ -11,6 +11,11 @@
     z-index: 1000; 
 }
 
+.overlay-button {
+    background: none;
+    border: none;
+}
+
 .overlay-content {
     background: white;
     padding: 10px;
