--- a/src/Articles/Articles/Articles.css
+++ b/src/Articles/Articles/Articles.css
@@ -1,3 +1,6 @@
+.articles {
+    margin-bottom: 2rem;
+}
 .no-results {
     font-weight: bold;
     font-size: 18px;
@@ -5,3 +8,4 @@
     background-color: antiquewhite;
     border-radius: 10px;
 }
+
